syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resources";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/common/common.proto";

package dev.multy.resources;

message CreateVaultSecretRequest {
  repeated CloudSpecificVaultSecretArgs resources = 1;
}

message ReadVaultSecretRequest {
  string resource_id = 1;
}

message UpdateVaultSecretRequest {
  string resource_id = 1;
  repeated CloudSpecificVaultSecretArgs resources = 2;
}

message DeleteVaultSecretRequest {
  string resource_id = 1;
}

message CloudSpecificVaultSecretArgs {
  common.CloudSpecificChildResourceCommonArgs common_parameters = 1;
  string name = 2;
  string value = 3;
  string vault_id = 4;
}

message CloudSpecificVaultSecretResource {
  common.CloudSpecificCommonChildResourceParameters common_parameters = 1;
  string name = 2;
  string value = 3;
  string vault_id = 4;
}

message VaultSecretResource {
  common.CommonResourceParameters common_parameters = 1;
  repeated CloudSpecificVaultSecretResource resources = 2;
}
